--- a/lottery_system/templates/base.html
+++ b/lottery_system/templates/base.html
@@ -1,19 +1,33 @@
 <!doctype html>
 <!-- https://flask.palletsprojects.com/en/stable/tutorial/templates/ -->
 <title>{% block title %}{% endblock %}</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<!-- https://v5.bootcss.com/docs/getting-started/download/ -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-/mhDoLbDldZc3qpsJHpLogda//BVZbgYuw6kof4u2FrCedxOtgRZDTHgHUhOCVim" crossorigin="anonymous"></script>
+<!-- <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> -->
+
 <nav>
-  <h1>lottery</h1>
-  <ul>
-    {% if g.user %}
-      <li><span>{{ g.user['username'] }}</span>
-      <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
-    {% else %}
-      <li><a href="{{ url_for('auth.register') }}">Register</a>
-      <li><a href="{{ url_for('auth.login') }}">Log In</a>
-    {% endif %}
+  <!-- https://v5.bootcss.com/docs/components/navbar/ -->
+  <ul class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <li class="navbar-brand"><a href="/" class="nav-link active">lottery</a></li>
+      <div class="me-2">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          {% if session.user_id %}
+            <li class="nav-item"><a class="nav-link">{{ session.user_id }}</a>
+            <li class="nav-item"><a class="nav-link active" href="{{ url_for('auth.logout') }}">Log Out</a>
+          {% else %}
+            <li class="nav-item"><a class="nav-link active" href="{{ url_for('auth.login') }}">Log In</a>
+            <li class="nav-item"><a class="nav-link active" href="{{ url_for('auth.register') }}">Register</a>
+          {% endif %}
+        </ul>
+      </div>
   </ul>
+  </div>
 </nav>
+
 <section class="content">
   <header>
     {% block header %}{% endblock %}
