--- a/lottery_system/templates/login_register.html
+++ b/lottery_system/templates/login_register.html
@@ -22,7 +22,7 @@
       <label for="username">username</label>
     </div>
     <div class="form-floating mb-3">
-      <input type="password" class="form-control" name="password" id="password" placeholder="password" required>
+      <input type="password" class="form-control {% if error_username %} is-invalid {% endif %}" name="password" id="password" placeholder="password" required>
       <label for="password">password</label>
     </div>
     <div class="form-floating mb-3">
