--- a/lottery_system/templates/base.html
+++ b/lottery_system/templates/base.html
@@ -2,10 +2,8 @@
 <!-- https://flask.palletsprojects.com/en/stable/tutorial/templates/ -->
 <title>{% block title %}{% endblock %}</title>
 <!-- https://v5.bootcss.com/docs/getting-started/download/ -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-/mhDoLbDldZc3qpsJHpLogda//BVZbgYuw6kof4u2FrCedxOtgRZDTHgHUhOCVim" crossorigin="anonymous"></script>
+<link href="https://npm.elemecdn.com/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+<script src="https://npm.elemecdn.com/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <!-- <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> -->
 
 <nav>
