--- a/lottery_system/templates/create_lottery.html
+++ b/lottery_system/templates/create_lottery.html
@@ -59,6 +59,9 @@
 {% block content %}
 <form method="post">
   <div class="mt-5 mx-5">
+    <input class="form-control" id="title" name="title" placeholder="..." required>
+  </div>
+  <div class="mt-5 mx-5">
     <div class="row">
       <div class="col-auto">
         <div class="row">
