--- a/lottery_system/templates/lottery.html
+++ b/lottery_system/templates/lottery.html
@@ -4,7 +4,7 @@
 
 {% block header %}
 {% if award %}
-<div class="mx-5 alert alert-warning" role="alert">
+<div class="mx-5 alert alert-success" role="alert">
   <div>{{award}}</div>
 </div>
 {% endif %}
@@ -43,14 +43,18 @@
     <h4>奖品列表</h4>
     <ul class="list-group">
       {% for a in lottery['rewards'] %}
-        <li class="list-group-item">{{lottery['rewards'][a][0]}} *{{lottery['rewards'][a][1]}}</li>
+      <li class="list-group-item">{{lottery['rewards'][a][0]}} *{{lottery['rewards'][a][1]}}</li>
       {% endfor %}
     </ul>
   </div>
   <div class="mt-3">
     <h4>抽奖记录</h4>
     <ul class="list-group">
-      <!-- todo -->
+      {% for r in results['results'] %}
+      {% for user in results['results'][r] %}
+      <li class="list-group-item">{{user}}-{{lottery['rewards'][r][0]}}</li>
+      {% endfor %}
+      {% endfor %}
     </ul>
   </div>
 </div>
