--- a/lottery_system/templates/lottery.html
+++ b/lottery_system/templates/lottery.html
@@ -5,6 +5,7 @@
 {% block header %}
 {% if award %}
 <div class="mx-5 alert alert-success" role="alert">
+  <div>你抽中了</div>
   <div>{{award}}</div>
 </div>
 {% endif %}
@@ -36,14 +37,14 @@
       </div>
     </div>
     {% if enable %}
-    <button class="btn btn-primary">抽</button>
+    <a class="btn btn-primary" href="/lottery/{{lottery['id']}}/draw">抽</a>
     {% endif %}
   </div>
   <div class="mt-3">
     <h4>奖品列表</h4>
     <ul class="list-group">
       {% for a in lottery['rewards'] %}
-      <li class="list-group-item">{{lottery['rewards'][a][0]}} *{{lottery['rewards'][a][1]}}</li>
+      <li class="list-group-item">{{lottery['rewards'][a][0]}} *{{lottery['rewards'][a][1]}}/{{lottery['rewards'][a][2]}}</li>
       {% endfor %}
     </ul>
   </div>
@@ -52,7 +53,7 @@
     <ul class="list-group">
       {% for r in results['results'] %}
       {% for user in results['results'][r] %}
-      <li class="list-group-item">{{user}}-{{lottery['rewards'][r][0]}}</li>
+      <li class="list-group-item">{{user[1]}} - {{user[0]}} - {{lottery['rewards'][r][0]}}</li>
       {% endfor %}
       {% endfor %}
     </ul>
