--- a/lottery_system/templates/lottery.html
+++ b/lottery_system/templates/lottery.html
@@ -44,7 +44,8 @@
     <h4>奖品列表</h4>
     <ul class="list-group">
       {% for a in lottery['rewards'] %}
-      <li class="list-group-item">{{lottery['rewards'][a][0]}} *{{lottery['rewards'][a][1]}}/{{lottery['rewards'][a][2]}}</li>
+      <li class="list-group-item">{{lottery['rewards'][a][0]}}
+        {{lottery['rewards'][a][1]}}/{{lottery['rewards'][a][2]}}</li>
       {% endfor %}
     </ul>
   </div>
@@ -53,7 +54,8 @@
     <ul class="list-group">
       {% for r in results['results'] %}
       {% for user in results['results'][r] %}
-      <li class="list-group-item">{{user[1]}} - {{user[0]}} - {{lottery['rewards'][r][0]}}</li>
+      <li class="list-group-item {% if user[0] == session['user_id'] %} list-group-item-success{% endif %} ">{{user[1]}}
+        - {{user[0]}} - {{lottery['rewards'][r][0]}}</li>
       {% endfor %}
       {% endfor %}
     </ul>
