--- a/lottery_system/templates/lottery.html
+++ b/lottery_system/templates/lottery.html
@@ -17,6 +17,7 @@
   <hr>
   <div>开始时间 {{begin}}</div>
   <div>结束时间 {{end}}</div>
+  <div>参与人数 {{p}}/{{lottery["participator"]}}</div>
   <hr>
   <div class="mt-4">
     <!-- https://v5.bootcss.com/docs/components/modal/#live-demo -->
@@ -51,7 +52,8 @@
   </div>
   <div class="mt-3">
     <h4>抽奖记录</h4>
-    <ul class="list-group">
+    <!-- <a class="btn btn-primary" href="/api/export/{{lottery['id']}}">导出</a> -->
+    <ul class="list-group mt-3">
       {% for r in results['results'] %}
       {% for user in results['results'][r] %}
       <li class="list-group-item {% if user[0] == session['user_id'] %} list-group-item-success{% endif %} ">{{user[1]}}
