--- a/lottery_system/templates/lottery.html
+++ b/lottery_system/templates/lottery.html
@@ -52,7 +52,7 @@
   </div>
   <div class="mt-3">
     <h4>抽奖记录</h4>
-    <!-- <a class="btn btn-primary" href="/api/export/{{lottery['id']}}">导出</a> -->
+    <a class="btn btn-primary" href="/api/export/{{lottery['id']}}">导出</a>
     <ul class="list-group mt-3">
       {% for r in results['results'] %}
       {% for user in results['results'][r] %}
