--- a/lottery_system/templates/lottery.html
+++ b/lottery_system/templates/lottery.html
@@ -38,7 +38,7 @@
       </div>
     </div>
     {% if enable %}
-    <a class="btn btn-primary" href="/lottery/{{lottery['id']}}/draw">抽</a>
+    <a class="btn btn-primary" href="/lottery/{{lottery['id']}}/draw">抽奖</a>
     {% endif %}
   </div>
   <div class="mt-3">
