--- a/lottery_system/templates/create_lottery.html
+++ b/lottery_system/templates/create_lottery.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} create {% endblock %}
+{% block title %} 创建 {% endblock %}
 
 {% block header %}
 {% if message %}
