--- a/lottery_system/templates/base.html
+++ b/lottery_system/templates/base.html
@@ -9,7 +9,6 @@
     crossorigin="anonymous">
   <script src="https://npm.elemecdn.com/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     crossorigin="anonymous"></script>
-  <!-- <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -20,19 +19,19 @@
     <ul class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <li class="navbar-brand"><a href="/" class="nav-link active">抽奖</a></li>
-        <div class="me-2">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <div class="mx-2 me-2">
+          <ul class="navbar-nav me-0">
             {% if session.user_id %}
-            <li class="nav-item"><a class="nav-link">{{ session.user_id }}</a>
-            <li class="nav-item"><a class="nav-link active" href="{{ url_for('auth.logout') }}">登出</a>
-              {% else %}
-            <li class="nav-item"><a class="nav-link active" href="{{ url_for('auth.login') }}">登录</a>
-            <li class="nav-item"><a class="nav-link active" href="{{ url_for('auth.register') }}">注册</a>
-              {% endif %}
+            <li class="nav-item"><a class="nav-link">{{ session.user_id }}</a></li>
+            <li class="nav-item"><a class="nav-link active" href="{{ url_for('auth.logout') }}">登出</a></li>
+            {% else %}
+            <li class="nav-item"><a class="nav-link active" href="{{ url_for('auth.login') }}">登录</a></li>
+            <li class="nav-item"><a class="nav-link active" href="{{ url_for('auth.register') }}">注册</a></li>
+            {% endif %}
           </ul>
         </div>
+      </div>
     </ul>
-    </div>
   </nav>
 
   <section class="content">
