html: center qrcode

--- a/lottery_system/templates/base.html
+++ b/lottery_system/templates/base.html
@@ -18,7 +18,7 @@
     <!-- https://v5.bootcss.com/docs/components/navbar/ -->
     <ul class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <li class="navbar-brand"><a href="/" class="nav-link active">抽奖</a></li>
+        <li class="navbar-brand nav-item nav-link"><a href="/" class="nav-link active">抽奖</a></li>
         <div class="mx-2 me-2">
           <ul class="navbar-nav me-0">
             {% if session.user_id %}
