--- a/lottery_system/templates/lottery.html
+++ b/lottery_system/templates/lottery.html
@@ -31,7 +31,7 @@
             <h1 class="modal-title fs-5" id="exampleModalLabel"> </h1>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-          <div class="modal-body">
+          <div class="modal-body mx-auto">
             <img src="/api/qrcode/{{lottery['id']}}">
           </div>
         </div>
